@@ -39,8 +39,8 @@ return array(
     'Lysine\Storage\DB\SelectIterator' => 'storage/db/select.php',
     'Lysine\Storage\DB\Select\Pgsql' => 'storage/db/select/pgsql.php',
     'Lysine\Storage\File' => 'storage/file.php',
+    'Lysine\Storage\Manager' => 'storage/manager.php',
     'Lysine\Storage\Mongo' => 'storage/mongo.php',
-    'Lysine\Storage\Pool' => 'storage/pool.php',
     'Lysine\Storage\Redis' => 'storage/redis.php',
     'Lysine\Utils\Curl' => 'utils/curl.php',
     'Lysine\Utils\Curl\Http' => 'utils/curl.php',
